--- a/openapi/astra-devops-api.yaml
+++ b/openapi/astra-devops-api.yaml
@@ -2688,15 +2688,6 @@ components:
         - AWS
         - GCP
         - AZURE
-    InstanceType:
-      type: string
-      description: "Instance type for PCU groups"
-      enum:
-        - standard
-        - storageOptimized
-      x-enum-varnames:
-        - PcuInstanceTypeStandard
-        - PcuInstanceTypeStorageOptimized
     ProvisionType:
       type: string
       description: "Provision type for PCU groups"
@@ -4578,7 +4569,9 @@ components:
             description: Region of the PCU group
             example: "us-east-1"
           instanceType:
-            $ref: '#/components/schemas/InstanceType'
+            type: string
+            description: "Instance type for PCU groups"
+            example: "standard"
           provisionType:
             $ref: '#/components/schemas/ProvisionType'
           min:
@@ -4643,7 +4636,9 @@ components:
             description: Region of the PCU group
             example: "us-east-1"
           instanceType:
-            $ref: '#/components/schemas/InstanceType'
+            type: string
+            description: "Instance type for PCU groups"
+            example: "standard"
           provisionType:
             $ref: '#/components/schemas/ProvisionType'
           min:
@@ -4685,7 +4680,9 @@ components:
             description: Title of the PCU group
             example: "some title"
           instanceType:
-            $ref: '#/components/schemas/InstanceType'
+            type: string
+            description: "Instance type for PCU groups"
+            example: "standard"
           provisionType:
             $ref: '#/components/schemas/ProvisionType'
           min:
