--- a/openapi/astra-devops-api.yaml
+++ b/openapi/astra-devops-api.yaml
@@ -2239,8 +2239,8 @@ paths:
           $ref: '#/components/responses/Forbidden'
         '404':
           $ref: '#/components/responses/NotFound'
-        '5XX':
-          $ref: '#/components/responses/ServerError'
+        '500':
+          "$ref": "#/components/responses/ServerError"
   /v2/pcus/{pcuGroupUUID}:
     delete:
       tags:
@@ -2264,8 +2264,8 @@ paths:
           $ref: '#/components/responses/Forbidden'
         '404':
           $ref: '#/components/responses/NotFound'
-        '5XX':
-          $ref: '#/components/responses/ServerError'
+        '500':
+          "$ref": "#/components/responses/ServerError"
   /v2/pcus:
     post:
       tags:
@@ -2297,7 +2297,7 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '403':
           $ref: '#/components/responses/Forbidden'
-        '5XX':
+        '500':
           $ref: '#/components/responses/ServerError'
     put:
       tags:
@@ -2331,7 +2331,7 @@ paths:
           $ref: '#/components/responses/Forbidden'
         '404':
           $ref: '#/components/responses/NotFound'
-        '5XX':
+        '500':
           $ref: '#/components/responses/ServerError'
   /v2/pcus/association/{pcuGroupUUID}:
     get:
@@ -2362,7 +2362,7 @@ paths:
           $ref: '#/components/responses/Forbidden'
         '404':
           $ref: '#/components/responses/NotFound'
-        '5XX':
+        '500':
           $ref: '#/components/responses/ServerError'
   /v2/pcus/association/transfer:
     post:
@@ -2385,7 +2385,7 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '403':
           $ref: '#/components/responses/Forbidden'
-        '5XX':
+        '500':
           $ref: '#/components/responses/ServerError'
   /v2/pcus/association/{pcuGroupUUID}/{datacenterUUID}:
     post:
@@ -2416,7 +2416,7 @@ paths:
           $ref: '#/components/responses/Forbidden'
         '404':
           $ref: '#/components/responses/NotFound'
-        '5XX':
+        '500':
           $ref: '#/components/responses/ServerError'
     delete:
       tags:
@@ -2446,7 +2446,7 @@ paths:
           $ref: '#/components/responses/Forbidden'
         '404':
           $ref: '#/components/responses/NotFound'
-        '5XX':
+        '500':
           $ref: '#/components/responses/ServerError'
   /v2/pcus/park/{pcuGroupUUID}:
     post:
@@ -2469,7 +2469,7 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '403':
           $ref: '#/components/responses/Forbidden'
-        '5XX':
+        '500':
           $ref: '#/components/responses/ServerError'
   /v2/pcus/unpark/{pcuGroupUUID}:
     post:
@@ -2492,7 +2492,7 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '403':
           $ref: '#/components/responses/Forbidden'
-        '5XX':
+        '500':
           $ref: '#/components/responses/ServerError'
   /v2/enterprises/organizations:
     post:
